kubernetes/op-scim-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: op-scim-bridge
  namespace: scim-1
spec:
  selector:
    matchLabels:
      app: op-scim-bridge
  replicas: 1
  template:
    metadata:
      labels:
        app: op-scim-bridge
    spec:
      containers:
        - name: op-scim-bridge
          image: 1password/scim:v2.8.3
          ports:
            # HTTPS port (external TCP traffic should be forwarded to this port by default)
            - name: https
              containerPort: 8443
            # HTTP port (forward unencrypted traffic to this port if not using Let's Encrypt)
            - name: http
              containerPort: 3002
          volumeMounts:
            - name: secrets
              mountPath: "/secrets"
              readOnly: false
          resources:
            requests:
              cpu: 125m
              memory: 256M
            limits:
              cpu: 250m
              memory: 512M
      volumes:
      - name: secrets
        projected:
          sources:
          - secret:
              name: scimsession
          - secret:
              name: workspace-credentials
              optional: true
          - secret:
              name: workspace-settings  
              optional: true
          - secret:
              name: op-scim-tls
              optional: true
              items:
                - key: tls.crt
                  path: tls.crt
                - key: tls.key
                  path: tls.key

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: op-scim-bridge
  namespace: scim-2
spec:
  selector:
    matchLabels:
      app: op-scim-bridge
  replicas: 1
  template:
    metadata:
      labels:
        app: op-scim-bridge
    spec:
      containers:
        - name: op-scim-bridge
          image: 1password/scim:v2.8.3
          ports:
            # HTTPS port (external TCP traffic should be forwarded to this port by default)
            - name: https
              containerPort: 8443
            # HTTP port (forward unencrypted traffic to this port if not using Let's Encrypt)
            - name: http
              containerPort: 3002
          volumeMounts:
            - name: secrets
              mountPath: "/secrets"
              readOnly: false
          resources:
            requests:
              cpu: 125m
              memory: 256M
            limits:
              cpu: 250m
              memory: 512M
      volumes:
      - name: secrets
        projected:
          sources:
          - secret:
              name: scimsession
          - secret:
              name: workspace-credentials
              optional: true
          - secret:
              name: workspace-settings  
              optional: true
          - secret:
              name: op-scim-tls
              optional: true
              items:
                - key: tls.crt
                  path: tls.crt
                - key: tls.key
                  path: tls.key

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: op-scim-bridge
  namespace: scim-3
spec:
  selector:
    matchLabels:
      app: op-scim-bridge
  replicas: 1
  template:
    metadata:
      labels:
        app: op-scim-bridge
    spec:
      containers:
        - name: op-scim-bridge
          image: 1password/scim:v2.8.3
          ports:
            # HTTPS port (external TCP traffic should be forwarded to this port by default)
            - name: https
              containerPort: 8443
            # HTTP port (forward unencrypted traffic to this port if not using Let's Encrypt)
            - name: http
              containerPort: 3002
          volumeMounts:
            - name: secrets
              mountPath: "/secrets"
              readOnly: false
          resources:
            requests:
              cpu: 125m
              memory: 256M
            limits:
              cpu: 250m
              memory: 512M
      volumes:
      - name: secrets
        projected:
          sources:
          - secret:
              name: scimsession
          - secret:
              name: workspace-credentials
              optional: true
          - secret:
              name: workspace-settings  
              optional: true
          - secret:
              name: op-scim-tls
              optional: true
              items:
                - key: tls.crt
                  path: tls.crt
                - key: tls.key
                  path: tls.key
