kubernetes/op-scim-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: op-scim-bridge
  namespace: scim-1
  labels:
    app: op-scim-bridge
spec:
  type: LoadBalancer
  ports:
    # Use this port in the standard configuration to terminate TLS at the SCIM
    # bridge container using Let's Encrypt
    # - protocol: TCP
    #   name: https
    #   port: 443
    #   targetPort: https
    # Use this port when terminating TLS in front of the SCIM bridge to listen
    # for unencrypted traffic redirected from a reverse proxy or load balancer
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
  selector:
    app: op-scim-bridge

---

apiVersion: v1
kind: Service
metadata:
  name: op-scim-bridge
  namespace: scim-2
  labels:
    app: op-scim-bridge
spec:
  type: LoadBalancer
  ports:
    # Use this port in the standard configuration to terminate TLS at the SCIM
    # bridge container using Let's Encrypt
    # - protocol: TCP
    #   name: https
    #   port: 443
    #   targetPort: https
    # Use this port when terminating TLS in front of the SCIM bridge to listen
    # for unencrypted traffic redirected from a reverse proxy or load balancer
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
  selector:
    app: op-scim-bridge

---

apiVersion: v1
kind: Service
metadata:
  name: op-scim-bridge
  namespace: scim-3
  labels:
    app: op-scim-bridge
spec:
  type: LoadBalancer
  ports:
    # Use this port in the standard configuration to terminate TLS at the SCIM
    # bridge container using Let's Encrypt
    # - protocol: TCP
    #   name: https
    #   port: 443
    #   targetPort: https
    # Use this port when terminating TLS in front of the SCIM bridge to listen
    # for unencrypted traffic redirected from a reverse proxy or load balancer
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
  selector:
    app: op-scim-bridge
